--- a/style.css
+++ b/style.css
@@ -1,69 +1,69 @@
 body {
-    background-color: #01092c;
+    background-color: #150c33;
     color: white;
-    font-family: "Roboto", sans-serif;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+    font-family: Bahnschrift;
 }
 
 .center {
-    text-align: center;
-    position: absolute;
-    top: 30%; /* Startpunkt des Textes in der Mitte des Bildschirms */
-    left: 50%;
-    transform: translateX(-50%);
-    animation: moveToTop 8s ease-in-out forwards; /* Bewegung nach oben */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
-    font-size: 10vw; /* Dynamische Schriftgröße */
-    white-space: nowrap;
-    opacity: 0; /* Unsichtbar beim Start */
-    animation: fadeInTitle 4s ease-in-out forwards; /* Animation für das Einblenden */
+    font-size: 100px;
+    background: linear-gradient(to right, red, orange);
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 32px;
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+    animation: fadeIn 1s;
 }
 
 h2 {
-    font-size: 3vw; /* Dynamische Schriftgröße */
-    margin-top: 20px; /* Abstand zum Titel */
-    white-space: nowrap;
-    opacity: 0; /* Unsichtbar beim Start */
-    animation: fadeInSubtitle 4s ease-in-out forwards 2s; /* Verzögerte Animation nach dem Titel */
+    font-size: 32px;
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+    animation: fadeIn 1s;
 }
 
-@keyframes fadeInTitle {
-    0% {
-        opacity: 0;
-        transform: translateY(50px) scale(1.5); /* Größer und weiter unten zu Beginn */
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0) scale(1); /* Endgröße und Endposition */
-    }
+.aboutme {
+    margin-top: 64px;
+    animation: fadeIn 1s;
 }
 
-/* Keyframe-Animation für das Einblenden des Untertitels */
-@keyframes fadeInSubtitle {
-    0% {
-        opacity: 0;
-        transform: translateY(30px); /* Leicht nach unten versetzt zu Beginn */
+    .aboutme .box {
+        font-size: 32px;
+        box-shadow: #2e1482 0px 0px 25px 10px;
+        border-radius: 16px;
+        width: 40%;
+        text-align: left;
+        background: url('res/programming1.jpg');
+        height: 400px;
     }
-    100% {
-        opacity: 1;
-        transform: translateY(0); /* Endposition */
-    }
-}
 
-/* Keyframe-Animation für die Bewegung nach oben */
-@keyframes moveToTop {
-    0% {
-        top: 50%; /* Startpunkt näher an der Mitte */
-    }
-    100% {
-        top: 10%; /* Endpunkt oben am Bildschirm */
-    }
-}
+        .aboutme .box p {
+            margin-left: 25px;
+        }
+
+        .aboutme .box h3 {
+            font-size: 45px;
+            margin-left: 25px;
+            margin-block-start: 25px;
+            margin-block-end: 3px;
+            color: #b395e7
+        }
+
+        @keyframes fadeIn {
+            0% {
+                margin-top: 100%;
+            }
+
+            70% {
+                margin-top: -15px;
+            }
+
+            100% {
+            }
+        }
